--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,23 +1,24 @@
 .Wrapper {
   padding: 0 13%;
-  background-color: rgb(0, 98, 128);
-
+  background-color: rgb(16, 160, 204);
+  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
+  margin-bottom: 1%;
 }
 
 .Headertitle {
   display: flex;
-  color:   white
-  
+  color: white;
 }
 .Headertitle:hover {
-  color:rgb(106, 245, 129);
-  text-decoration: none
+  color: rgb(200, 27, 94);
+  text-decoration: none;
+  
 }
 .Headertitle > img {
   animation: Nav-logo-spin infinite 20s linear;
-  height: 7vmin;
+  height: 9vmin;
   pointer-events: none;
-  color:white;
+  color: white;
 }
 @keyframes Nav-logo-spin {
   from {
@@ -29,15 +30,15 @@
 }
 .Headertitle > h3 {
   margin-left: 10px;
+  vertical-align: middle;
+  padding-top: 3%;
 }
 
-.Headertitle >button{
-  background-color: rgb(5, 164, 212);
+.Headertitle > button {
+  background-color: rgb(200, 27, 94);
+  border-color: rgb(200, 27, 94);
+  text-transform: uppercase;
+  border: none;
+  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
 
-  border:none;
 }
-
-.Headertitle > button:hover {
-  background-color: rgb(101, 218, 101);
-}  
-
