--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+
 }
 
 .Login__content {
@@ -15,20 +17,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
+
 }
 
-.Login__content > h3 {
+.Login__content > h2 {
   text-align: center;
+  color: rgb(200, 27, 94);
+  font-weight: bold;
 }
 
-.Login__content > Button:hover{
-    background-color: rgb(101, 218, 101);
-    border-color: rgb(101, 218, 101);
-    text-transform: capitalize
+
+
+.Login__content > button {
+  text-transform: uppercase;
+  margin: 5%;
+  width: 70%;
+  /* min-width: 100px; */
+  align-self: center;
+  background-color: rgb(200, 27, 94);
+  border-color: rgb(200, 27, 94);
+  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
+
 }
-
-.Login__content > Button {
-    text-transform: uppercase;
-
-  }
-
