--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -2,8 +2,13 @@
     padding: 0 2%;
     color: rgb(68, 67, 67);
 
+
 }
 .PostCard__card-title {
     font-weight: 700;
 
+}
+
+.PostCard__cardBody{
+    box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.05);
 }
