--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,34 +1,40 @@
 .Register {
-    height: 100vh;
-    background-color: rgb(243, 243, 243);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .Register__content {
-    width: 30%;
-    background-color: rgb(5, 164, 212);
-    padding: 1%;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .Register__content > h3 {
-    text-align: center;
-  }
-  .Register__content > Button {
-    text-transform: uppercase;
-
-  }
-
-  .Register__content > Button:hover{
-    background-color: rgb(101, 218, 101);
-    border-color: rgb(101, 218, 101);
+  height: 100vh;
+  background-color: rgb(243, 243, 243);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-  
-  
-  
+
+.Register__content {
+  width: 30%;
+  /* min-width: 150px; */
+  background-color: rgb(5, 164, 212);
+  padding: 1%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
+
+}
+
+.Register__content > h2 {
+  text-align: center;
+  color: rgb(200, 27, 94);
+  font-weight: bold;
+}
+.Register__content > button {
+  text-transform: uppercase;
+  margin: 5%;
+  width: 70%;
+  /* min-width: 100px; */
+  align-self: center;
+  background-color: rgb(200, 27, 94);
+  border-color: rgb(200, 27, 94);
+  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
+
+}
+
+
