--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,11 +12,10 @@
 .Headertitle:hover {
   color: rgb(200, 27, 94);
   text-decoration: none;
-  
 }
 .Headertitle > img {
   animation: Nav-logo-spin infinite 20s linear;
-  height: 9vmin;
+  height: 10vmin;
   pointer-events: none;
   color: white;
 }
@@ -30,8 +29,9 @@
 }
 .Headertitle > h3 {
   margin-left: 10px;
-  vertical-align: middle;
+  align-self: middle;
   padding-top: 3%;
+  margin-top:5%;
 }
 
 .Headertitle > button {
@@ -40,5 +40,4 @@
   text-transform: uppercase;
   border: none;
   box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
-
 }
