--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -17,7 +17,6 @@
   flex-direction: column;
   justify-content: center;
   box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
-
 }
 
 .Register__content > h2 {
@@ -34,7 +33,9 @@
   background-color: rgb(200, 27, 94);
   border-color: rgb(200, 27, 94);
   box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
-
 }
 
-
+.Register__content__link > a {
+  margin-top: 10px;
+  color: white;
+}
