--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,29 +5,29 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-
 }
+ 
+  .Login__content {
+    width: 40%;
+    background-color: rgb(5, 164, 212);
+    padding: 1%;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
+  }
 
-.Login__content {
-  width: 30%;
-  background-color: rgb(5, 164, 212);
-  padding: 1%;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
-
-}
-
+/* @media (min-width: 600px) {
+  .Login__content {
+    width: 40%;
+     }
+} */
 .Login__content > h2 {
   text-align: center;
   color: rgb(200, 27, 94);
   font-weight: bold;
 }
-
-
 
 .Login__content > button {
   text-transform: uppercase;
@@ -38,5 +38,4 @@
   background-color: rgb(200, 27, 94);
   border-color: rgb(200, 27, 94);
   box-shadow: 0px 3px 16px 3px rgba(0, 0, 0, 0.3);
-
 }
