--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -1,8 +1,11 @@
 .Posts{
-    padding: 0 2%;
+    padding: 0;
     color: rgb(68, 67, 67);
 
 
+}
+.PostCard {
+    margin-bottom: 20px;
 }
 .PostCard__card-title {
     font-weight: 700;
