--- a/src/components/Usercard/Usercard.css
+++ b/src/components/Usercard/Usercard.css
@@ -5,6 +5,8 @@
     justify-content: space-evenly;
     padding: 2% 3%;
     border-bottom: 1px solid rgb(230, 227, 227);
+    margin: 10px;
+    
 }
 
 .UserCard__image {
